Реализация ТЗ-5 (Без проверки)