@@ -1,28 +1,38 @@
 package managers;
 
 import model.Task;
+import util.CustomLinkedList;
 
-import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 public class InMemoryHistoryManager implements HistoryManager {
     private static final int MAX_HISTORY_LENGTH = 10;
-    List<Task> taskHistory = new ArrayList<>(MAX_HISTORY_LENGTH);
+    private final CustomLinkedList taskHistory = new CustomLinkedList();
 
-
+    /**
+     * Добавление в историю просмотренной задачи.
+     *
+     * @param task просмотренная задача
+     */
     @Override
     public void add(Task task) {
 
         if (taskHistory.size() < MAX_HISTORY_LENGTH) {
             taskHistory.add(task);
         } else {
-            taskHistory.remove(0);
+            taskHistory.removeFirst();
             taskHistory.add(task);
         }
     }
 
     @Override
+    public void remove(int taskId) {
+            taskHistory.remove(taskId);
+    }
+
+    @Override
     public List<Task> getHistory() {
-        return taskHistory;
+        return taskHistory.getTasks();
     }
 }
